--- a/index.html
+++ b/index.html
@@ -9,15 +9,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  <img src="./images/logo.svg" alt="logo"> 
+  <img src="./images/logo.svg" alt="Brand Logo"> 
   Features
   Team
   Sign In
@@ -102,7 +96,7 @@
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://lizziechan.com">Lizzie Chan</a> and <a href="https://kenneth-young.com">Kenneth Young</a>.
     </p>
   </footer>
 </body>
