--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <div class="navbar">
-      <a href="#"><img src="./images/logo.svg" alt="Brand Logo"/></a>
+      <a href="#"><img class="header-brand" src="./images/logo.svg" alt="Brand Logo"/></a>
       <div class="navbar-items">
         <a class="navbar-item" href="#">Features</a>
         <a class="navbar-item" href="#">Team</a>
