add styling to main image

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
       </div>
     </div>
 
+    <div class='content'>
+
+        <img class='main-image' src='./images/illustration-intro.png' alt='folder with papers'>
+  
+
     All your files in one secure location, accessible anywhere. Fylo stores all
     your most important files in one secure location. Access them wherever you
     need, share and collaborate with friends family, and co-workers. Get Started
@@ -63,7 +68,7 @@
     elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
     +1-543-123-4567 example@fylo.com About Us Jobs Press Blog Contact Us Terms
     Privacy
-
+  </div>
     <footer>
       <p class="attribution">
         Challenge by
