--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
         <img class='main-image' src='./images/illustration-intro.png' alt='folder with papers'>
   
 
-    All your files in one secure location, accessible anywhere. Fylo stores all
-    your most important files in one secure location. Access them wherever you
+    <h2 class='sub-header'>All your files in one secure location, accessible anywhere. </h2> Fylo stores all
+    your most important files in one secure location. 
+    
+    Access them wherever you
     need, share and collaborate with friends family, and co-workers. Get Started
     Access your files, anywhere The ability to use a smartphone, tablet, or
     computer to access your account means your files follow you everywhere.
