Styled card header and title

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class='person'>
             <img class="rounded" src="./images/profile-1.jpg" />
             <div class="title">
-              <h6>Satish Patel</h6>
+              <div class='person-name'>Satish Patel</div>
               <p>Founder & CEO, Huddle</p>
             </div>
           </div>
@@ -141,7 +141,7 @@
           <div class='person'>
             <img class="rounded" src="./images/profile-2.jpg" />
             <div class="title">
-              <h6>Bruce McKenzie</h6>
+              <div class='person-name'>Bruce McKenzie</div>
               <p>Founder & CEO, Huddle</p>
             </div>
           </div>
@@ -155,7 +155,7 @@
           <div class='person'>
             <img class="rounded" src="./images/profile-3.jpg" />
             <div class="title">
-              <h6>Iva Boyd</h6>
+              <div class='person-name'>Iva Boyd</div>
               <p>Founder & CEO, Huddle</p>
             </div>
           </div>
