Added background quotes to card group

--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
         <a href="#">See how Fylo works <img src="./images/icon-arrow.svg"/></a>
       </div>
       <div class="card-group">
+
+        <img id="quote-img" src="./images/bg-quotes.png">
         <div class="card">
           <p>
             Fylo has improved our team productivity by an order of magnitude.
@@ -163,7 +165,7 @@
       </div>
 
       <div class="card">
-        <h5>Get early access today</h5>
+        <h3>Get early access today</h3>
         <p>
           It only takes a minute to sign up and our free starter tier is
           extremely generous. If you have any questions, our support team would
