--- a/index.html
+++ b/index.html
@@ -164,17 +164,17 @@
         </div>
       </div>
 
-      <div class="card">
-        <h3>Get early access today</h3>
-        <p>
+      <div class="card early-access">
+        <h3 class='early-access-header'>Get early access today</h3>
+        <p class='early-access-p'>
           It only takes a minute to sign up and our free starter tier is
           extremely generous. If you have any questions, our support team would
           be happy to help you.
         </p>
 
         <form>
-          <input type="text" placeholder="email@example.com"></input>
-          <input type="submit" value="Get Started For Free"></input>
+          <input class='email-input' type="text" placeholder="email@example.com"></input>
+          <input class='email-button' type="submit" value="Get Started For Free"></input>
         </form>
       </div>
 
