Added card box shadow

--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
         </form>
       </div>
 
-      
+      <a href="#"
+      ><img class="footer-logo" src="./images/logo.svg" alt="Brand Logo"
+    /></a>
 
       Lorem ipsum dolor sit amet, consectetur adipiscing
       elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
@@ -187,9 +189,7 @@
     </div>
 
     <footer>
-      <a href="#"
-      ><img class="header-brand" src="./images/logo.svg" alt="Brand Logo"
-    /></a>
+    
 
       <!-- <div>
         <sp        
