--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       href="./images/favicon-32x32.png"
     />
 
+    <script src="https://kit.fontawesome.com/58716de049.js" crossorigin="anonymous"></script>
+
     <title>
       Frontend Mentor | Fylo landing page with dark theme and features grid
     </title>
@@ -177,27 +179,42 @@
           <input class='email-button' type="submit" value="Get Started For Free"></input>
         </form>
       </div>
-
-      <a href="#"
-      ><img class="footer-logo" src="./images/logo.svg" alt="Brand Logo"
-    /></a>
-
-      Lorem ipsum dolor sit amet, consectetur adipiscing
-      elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
-      +1-543-123-4567 example@fylo.com About Us Jobs Press Blog Contact Us Terms
-      Privacy
     </div>
 
     <footer>
-    
+      <a href="#"
+      ><img class="footer-logo" src="./images/logo.svg" alt="Brand Logo"
+      /></a>
 
-      <!-- <div>
-        <sp        
-      </div> -->
-
-
-
-
+      <div class="grid">
+        <!-- <div class="icon-group"> -->
+          <img class="icon" id="location-icon" src="./images/icon-location.svg">
+          <img class="icon" id="phone-icon" src="./images/icon-phone.svg">
+          <img class="icon" id="email-icon" src="./images/icon-email.svg">
+        <!-- </div> -->
+        <!-- <div class="contact-group"> -->
+          <div id="location-text">Lorem ipsum dolor sit amet, consectetur adipiscing
+          elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</div>
+          <div id="phone-text">+1-543-123-4567</div> 
+          <div id="email-text">example@fylo.com </div>
+        <!-- </div> -->
+      </div>
+      <div class='about'>
+      <a class='footer-item' href="#">About Us</a>  
+      <a class='footer-item' href="#">Jobs</a> 
+      <a class='footer-item' href="#">Press</a> 
+      <a class='footer-item' href="#">Blog</a> 
+      </div>
+      <div class='contact'>
+      <a class='footer-item' href="#">Contact Us</a> 
+      <a class='footer-item' href="#">Terms</a> 
+      <a class='footer-item' href="#">Privacy</a> 
+      </div>
+      <div class='icons'>
+        <i class="fab fa-facebook-f fb-icon"></i>
+        <i class="fab fa-twitter twitter-icon"></i>
+        <i class="fab fa-instagram insta-icon"></i>
+      </div>
       <p class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
