--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-    <link
+a 
+  a  <link
       href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap"
       rel="stylesheet"
     />
