Made illustration icons their natural width

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ a
       <button class="button">Get Started</button>
 
       <div class="blurbs">
-        <img class="illustration-icon" src="./images/icon-access-anywhere.svg" />
+        <img src="./images/icon-access-anywhere.svg" />
 
         <h3>Access your files, anywhere</h3>
 
@@ -71,7 +71,7 @@ a
       </div>
 
       <div class="blurbs">
-        <img class="illustration-icon" src="./images/icon-security.svg" />
+        <img src="./images/icon-security.svg" />
 
         <h3>Security you can trust</h3>
 
@@ -82,7 +82,7 @@ a
       </div>
 
       <div class="blurbs">
-        <img class="illustration-icon" src="./images/icon-collaboration.svg" />
+        <img src="./images/icon-collaboration.svg" />
 
         <h3>Real-time collaboration</h3>
 
@@ -93,7 +93,7 @@ a
       </div>
 
       <div class="blurbs">
-        <img class="illustration-icon" src="./images/icon-any-file.svg" />
+        <img src="./images/icon-any-file.svg" />
 
         <h3>Store any type of file</h3>
 
