--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-a 
-  a  <link
+
+    <link
       href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap"
       rel="stylesheet"
     />
@@ -108,12 +108,12 @@ a
       <div class="stay-productive-blurb">
         <h3>Stay productive, wherever you are</h3>
 
-        <p>
+        <p class='definition-paragraph'>
           Never let location be an issue when accessing your files. Fylo has you
           covered for all of your file storage needs.
         </p>
 
-        <p>
+        <p class='definition-paragraph'>
           Securely share files and folders with friends, family and colleagues
           for live collaboration. No email attachments required.
         </p>
