--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </p>
 
       <button class="button">Get Started</button>
-
+    <div class='blurbs-wrapper'>
       <div class="blurbs">
         <img src="./images/icon-access-anywhere.svg" />
 
@@ -102,6 +102,7 @@
           covered allowing for all file types to be securely stored and shared.
         </p>
       </div>
+    </div>
 
       <img class="main-image" src="./images/illustration-stay-productive.png" />
 
