add desktop for navbar and header logo

--- a/index.html
+++ b/index.html
@@ -50,14 +50,15 @@
         <h2 class="sub-header">
           All your files in one secure location, accessible anywhere.
         </h2>
-      </div>
+  
       <p class="summary-paragraph">
-        Fylo stores all your most important files in one secure location. Access
+        Fylo stores all your most important files in one secure location. <br/> Access
         them wherever you need, share and collaborate with friends family, and
         co-workers.
       </p>
 
       <button class="button">Get Started</button>
+    </div>
     <div class='blurbs-wrapper'>
       <div class="blurbs">
         <img src="./images/icon-access-anywhere.svg" />
