add desktop for stayproductive blurb

--- a/index.html
+++ b/index.html
@@ -105,10 +105,11 @@
       </div>
     </div>
 
+    <div class='stay-productive-wrapper'>
       <img class="main-image" src="./images/illustration-stay-productive.png" />
 
       <div class="stay-productive-blurb">
-        <h3>Stay productive, wherever you are</h3>
+        <h3 class='stay-productive-header'>Stay productive, <span class='stay-prod-span'>wherever you are</span></h3>
 
         <p class='definition-paragraph'>
           Never let location be an issue when accessing your files. Fylo has you
@@ -122,6 +123,7 @@
 
         <a href="#">See how Fylo works <img src="./images/icon-arrow.svg"/></a>
       </div>
+    </div>
       
       <div class="card-group">
 
